--- a/src/Pages/Pages.Print.fmx
+++ b/src/Pages/Pages.Print.fmx
@@ -7,7 +7,6 @@ object PagePrint: TPagePrint
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
-  OnCreate = FormCreate
   DesignerMasterStyle = 0
   object lytPrincipal: TLayout
     Align = Client
@@ -92,6 +91,16 @@ object PagePrint: TPagePrint
           PropertyName = 'Stroke.Color'
           StartValue = claNull
           StopValue = x5A36393F
+          Trigger = 'IsMouseOver=true'
+          TriggerInverse = 'IsMouseOver=false'
+        end
+        object FloatAnimation4: TFloatAnimation
+          AnimationType = InOut
+          Duration = 0.200000002980232200
+          Interpolation = Bounce
+          PropertyName = 'Scale.X'
+          StartValue = 1.000000000000000000
+          StopValue = 1.049999952316284000
           Trigger = 'IsMouseOver=true'
           TriggerInverse = 'IsMouseOver=false'
         end
