--- a/src/Pages/Pages.NewUser.fmx
+++ b/src/Pages/Pages.NewUser.fmx
@@ -7,6 +7,7 @@ object PageNewUser: TPageNewUser
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
   DesignerMasterStyle = 0
   object lytNewUser: TLayout
     Align = Client
@@ -34,74 +35,10 @@ object PageNewUser: TPageNewUser
         ShowScrollBars = False
         Viewport.Width = 688.000000000000000000
         Viewport.Height = 473.000000000000000000
-        object edtSenha: TEdit
-          Touch.InteractiveGestures = [LongTap, DoubleTap]
-          Align = Top
-          TabOrder = 2
-          Password = True
-          MaxLength = 40
-          TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 190.000000000000000000
-          Margins.Bottom = 5.000000000000000000
-          Size.Width = 688.000000000000000000
-          Size.Height = 27.000000000000000000
-          Size.PlatformDefault = False
-          TextPrompt = #8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226
-          StyledSettings = [Size, Style, FontColor]
-          object ClearEditButton2: TClearEditButton
-            CanFocus = False
-            Cursor = crArrow
-            Size.Width = 28.000000000000000000
-            Size.Height = 23.000000000000000000
-            Size.PlatformDefault = False
-            TabOrder = 0
-          end
-          object PasswordEditButton1: TPasswordEditButton
-            CanFocus = False
-            Cursor = crArrow
-            Position.X = 28.000000000000000000
-            Size.Width = 28.000000000000000000
-            Size.Height = 23.000000000000000000
-            Size.PlatformDefault = False
-            TabOrder = 1
-          end
-        end
-        object edtConfirmarSenha: TEdit
-          Touch.InteractiveGestures = [LongTap, DoubleTap]
-          Align = Top
-          TabOrder = 3
-          Password = True
-          MaxLength = 40
-          TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 244.000000000000000000
-          Margins.Bottom = 5.000000000000000000
-          Size.Width = 688.000000000000000000
-          Size.Height = 27.000000000000000000
-          Size.PlatformDefault = False
-          TextPrompt = #8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226
-          StyledSettings = [Size, Style, FontColor]
-          object ClearEditButton1: TClearEditButton
-            CanFocus = False
-            Cursor = crArrow
-            Size.Width = 28.000000000000000000
-            Size.Height = 23.000000000000000000
-            Size.PlatformDefault = False
-            TabOrder = 0
-          end
-          object PasswordEditButton2: TPasswordEditButton
-            CanFocus = False
-            Cursor = crArrow
-            Position.X = 28.000000000000000000
-            Size.Width = 28.000000000000000000
-            Size.Height = 23.000000000000000000
-            Size.PlatformDefault = False
-            TabOrder = 1
-          end
-        end
         object edtNomeUsuario: TEdit
           Touch.InteractiveGestures = [LongTap, DoubleTap]
           Align = Top
-          TabOrder = 0
+          TabOrder = 1
           MaxLength = 30
           TextSettings.Font.Family = 'Fira Code Retina'
           Position.Y = 82.000000000000000000
@@ -123,7 +60,7 @@ object PageNewUser: TPageNewUser
         object edtEmail: TEdit
           Touch.InteractiveGestures = [LongTap, DoubleTap]
           Align = Top
-          TabOrder = 1
+          TabOrder = 3
           TextSettings.Font.Family = 'Fira Code Retina'
           Position.Y = 136.000000000000000000
           Margins.Bottom = 5.000000000000000000
@@ -143,30 +80,6 @@ object PageNewUser: TPageNewUser
             TabOrder = 0
           end
         end
-        object lblSenha: TLabel
-          Align = Top
-          StyledSettings = [Size, Style, FontColor]
-          Margins.Bottom = 5.000000000000000000
-          Position.Y = 168.000000000000000000
-          Size.Width = 688.000000000000000000
-          Size.Height = 17.000000000000000000
-          Size.PlatformDefault = False
-          TextSettings.Font.Family = 'Fira Code Retina'
-          Text = 'Senha'
-          TabOrder = 4
-        end
-        object lblConfirmarSenha: TLabel
-          Align = Top
-          StyledSettings = [Size, Style, FontColor]
-          Margins.Bottom = 5.000000000000000000
-          Position.Y = 222.000000000000000000
-          Size.Width = 688.000000000000000000
-          Size.Height = 17.000000000000000000
-          Size.PlatformDefault = False
-          TextSettings.Font.Family = 'Fira Code Retina'
-          Text = 'Confirmar Senha'
-          TabOrder = 5
-        end
         object lblNomeUsuario: TLabel
           Align = Top
           StyledSettings = [Size, Style, FontColor]
@@ -177,7 +90,7 @@ object PageNewUser: TPageNewUser
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
           Text = 'Nome de usu'#225'rio'
-          TabOrder = 6
+          TabOrder = 0
         end
         object lblEmail: TLabel
           Align = Top
@@ -189,7 +102,163 @@ object PageNewUser: TPageNewUser
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
           Text = 'Email'
-          TabOrder = 7
+          TabOrder = 2
+        end
+        object lytNovasSenhas: TLayout
+          Align = Top
+          Position.Y = 257.000000000000000000
+          Size.Width = 688.000000000000000000
+          Size.Height = 112.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 20
+          object edtConfirmarNovaSenha: TEdit
+            Touch.InteractiveGestures = [LongTap, DoubleTap]
+            Align = Top
+            TabOrder = 3
+            Password = True
+            MaxLength = 40
+            TextSettings.Font.Family = 'Fira Code Retina'
+            Position.Y = 76.000000000000000000
+            Margins.Bottom = 5.000000000000000000
+            Size.Width = 688.000000000000000000
+            Size.Height = 27.000000000000000000
+            Size.PlatformDefault = False
+            TextPrompt = #8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226
+            StyledSettings = [Size, Style, FontColor]
+            object ClearEditButton1: TClearEditButton
+              CanFocus = False
+              Cursor = crArrow
+              Size.Width = 28.000000000000000000
+              Size.Height = 23.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 0
+            end
+            object PasswordEditButton2: TPasswordEditButton
+              CanFocus = False
+              Cursor = crArrow
+              Position.X = 28.000000000000000000
+              Size.Width = 28.000000000000000000
+              Size.Height = 23.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 1
+            end
+          end
+          object edtNovaSenha: TEdit
+            Touch.InteractiveGestures = [LongTap, DoubleTap]
+            Align = Top
+            TabOrder = 1
+            Password = True
+            MaxLength = 40
+            TextSettings.Font.Family = 'Fira Code Retina'
+            Position.Y = 22.000000000000000000
+            Margins.Bottom = 5.000000000000000000
+            Size.Width = 688.000000000000000000
+            Size.Height = 27.000000000000000000
+            Size.PlatformDefault = False
+            TextPrompt = #8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226
+            StyledSettings = [Size, Style, FontColor]
+            object ClearEditButton2: TClearEditButton
+              CanFocus = False
+              Cursor = crArrow
+              Size.Width = 28.000000000000000000
+              Size.Height = 23.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 0
+            end
+            object PasswordEditButton1: TPasswordEditButton
+              CanFocus = False
+              Cursor = crArrow
+              Position.X = 28.000000000000000000
+              Size.Width = 28.000000000000000000
+              Size.Height = 23.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 1
+            end
+          end
+          object lblConfirmarNovaSenha: TLabel
+            Align = Top
+            StyledSettings = [Size, Style, FontColor]
+            Margins.Bottom = 5.000000000000000000
+            Position.Y = 54.000000000000000000
+            Size.Width = 688.000000000000000000
+            Size.Height = 17.000000000000000000
+            Size.PlatformDefault = False
+            TextSettings.Font.Family = 'Fira Code Retina'
+            Text = 'Confirmar Senha'
+            TabOrder = 2
+          end
+          object lblNovaSenha: TLabel
+            Align = Top
+            StyledSettings = [Size, Style, FontColor]
+            Margins.Bottom = 5.000000000000000000
+            Size.Width = 688.000000000000000000
+            Size.Height = 17.000000000000000000
+            Size.PlatformDefault = False
+            TextSettings.Font.Family = 'Fira Code Retina'
+            Text = 'Senha'
+            TabOrder = 0
+          end
+        end
+        object lytSenhaAtual: TLayout
+          Align = Top
+          Position.Y = 168.000000000000000000
+          Size.Width = 688.000000000000000000
+          Size.Height = 89.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 21
+          object cbAlterarSenha: TCheckBox
+            Align = Top
+            Position.Y = 54.000000000000000000
+            Size.Width = 688.000000000000000000
+            Size.Height = 33.000000000000000000
+            Size.PlatformDefault = False
+            TabOrder = 0
+            Text = 'Alterar Senha?'
+            OnChange = cbAlterarSenhaChange
+          end
+          object edtSenhaAtual: TEdit
+            Touch.InteractiveGestures = [LongTap, DoubleTap]
+            Align = Top
+            TabOrder = 1
+            Password = True
+            MaxLength = 40
+            TextSettings.Font.Family = 'Fira Code Retina'
+            Position.Y = 22.000000000000000000
+            Margins.Bottom = 5.000000000000000000
+            Size.Width = 688.000000000000000000
+            Size.Height = 27.000000000000000000
+            Size.PlatformDefault = False
+            TextPrompt = #8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226#8226
+            StyledSettings = [Size, Style, FontColor]
+            object ClearEditButton4: TClearEditButton
+              CanFocus = False
+              Cursor = crArrow
+              Size.Width = 28.000000000000000000
+              Size.Height = 23.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 0
+            end
+            object PasswordEditButton3: TPasswordEditButton
+              CanFocus = False
+              Cursor = crArrow
+              Position.X = 28.000000000000000000
+              Size.Width = 28.000000000000000000
+              Size.Height = 23.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 1
+            end
+          end
+          object lblSenhaAtual: TLabel
+            Align = Top
+            StyledSettings = [Size, Style, FontColor]
+            Margins.Bottom = 5.000000000000000000
+            Size.Width = 688.000000000000000000
+            Size.Height = 17.000000000000000000
+            Size.PlatformDefault = False
+            TextSettings.Font.Family = 'Fira Code Retina'
+            Text = 'Senha atual'
+            TabOrder = 2
+          end
         end
       end
     end
@@ -199,7 +268,7 @@ object PageNewUser: TPageNewUser
       Size.Height = 63.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 9
-      object Label1: TLabel
+      object lblTitle: TLabel
         Align = VertCenter
         AutoSize = True
         StyledSettings = [Style, FontColor]
@@ -259,6 +328,16 @@ object PageNewUser: TPageNewUser
           PropertyName = 'Stroke.Color'
           StartValue = claNull
           StopValue = x5A36393F
+          Trigger = 'IsMouseOver=true'
+          TriggerInverse = 'IsMouseOver=false'
+        end
+        object FloatAnimation4: TFloatAnimation
+          AnimationType = InOut
+          Duration = 0.200000002980232200
+          Interpolation = Bounce
+          PropertyName = 'Scale.X'
+          StartValue = 1.000000000000000000
+          StopValue = 1.049999952316284000
           Trigger = 'IsMouseOver=true'
           TriggerInverse = 'IsMouseOver=false'
         end
